--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -13,7 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\img\Ecosistemas\" />
+    <Folder Include="wwwroot\img\Especies\" />
   </ItemGroup>
 
   <ItemGroup>
