ahora anda login

--- a/WebAPI.EM/appsettings.json
+++ b/WebAPI.EM/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "SecretTokenKey" :  "ab123"
+    "SecretTokenKey" :  "EstaClaveDebeSerLargaParaUnNivelDeSeguridadAdecuado"
   },
   "Logging": {
     "LogLevel": {
